sylt-old/progs/tests/blob/null_fields_faulty.sy
A :: blob {
}

B :: blob {
    a: int?
}

start :: fn {
    a : !B = A!
    print a.a
}

// error: #UnknownField(_, _)
